<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Keith W. Silliman

    Plant Buddy is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Plant Buddy is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Plant Buddy.  If not, see <http://www.gnu.org/licenses/>
-->
<resources xmlns:android="http://schemas.android.com/apk/res/android">
	<string name="app_name">Plant Buddy</string>
	<string name="one">1</string>
	
	<string-array name="time_quantity">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
		<item>13</item>
		<item>14</item>
		<item>15</item>
		<item>16</item>
		<item>17</item>
		<item>18</item>
		<item>19</item>
		<item>20</item>
		<item>21</item>
		<item>22</item>
		<item>23</item>
		<item>24</item>
		<item>25</item>
		<item>26</item>
		<item>27</item>
		<item>28</item>
		<item>29</item>
		<item>30</item>
		<item>31</item>
	</string-array>
	
	<string-array name="time_uom">
		<item>Days</item>
		<item >Weeks</item>
		<item>Months</item>
		<item>Seasons</item>
		<item>Years</item>
	</string-array>
	<string name="alarm_notification">Your plants need you!</string>
	<string name="edit_description">Edit Description</string>
	<string name="edit_aquisiton_date">Edit Acquisition Date</string>
	<string name="edit_source">Edit Source</string>
	<string name="add_care_tip">Add Care Tip</string>
	<string name="edit_care_tip">Edit Care Tip</string>
	<string name="remove_care_tip">Remove Care Tip</string>
	<string name="add_note">Add Note / Important Date</string>
	<string name="new_note">New Note / Important Date</string>
	<string name="edit_note">Edit Note / Important Date</string>
	<string name="remove_note">Remove Note / Important Date</string>
	<string name="add_alarm">Add Alarm</string>
	<string name="new_alarm">New Alarm</string>
	<string name="edit_alarm">Edit Alarm</string>
	<string name="remove_alarm">Remove Alarm</string>
	<string name="reset_recurring_alarm">Reset Recurring Alarm</string>
	<string name="no_reset_one_time_alarm">One time alarms may not be reset.</string>
	<string name="add_link">Add Link</string>
	<string name="new_link">New Link</string>
	<string name="edit_link">Edit Link</string>
	<string name="remove_link">Remove Link</string>
	<string name="my_plants">My Plants</string>
	<string name="start_date">Start Date</string>
	<string name="aquired_from">Acquired From</string>
	<string name="plant_name_colon">Plant Name:</string>
	<string name="date_aquired_colon">Date Acquired:</string>
	<string name="source_colon">Source:</string>
	<string name="desctiption">Description:</string>
	<string name="about">About</string>
	<string name="aquired_on">Acquired On</string>
	<string name="source">Source</string>
	<string name="images">Images</string>
	<string name="care_tip">Care Tips</string>
	<string name="notes">Notes / Important Dates</string>
	<string name="alarms">Alarms</string>
	<string name="links">Links</string>
	<string name="reminder">Reminder</string>
	<string name="reminde_me_every">Remind Me Every</string>
	<string name="from_today">from today.</string>
	<string name="remind_me_once">Reminde me once on this day:</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="confirm_remove">Are you sure you want to remove this plant?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="new_care_tip">New Care Tip</string>
	<string name="select_plant">Select plant</string>
	<string name="add_plant">Add Plant</string>
	<string name="new_plant">New Plant</string>
	<string name="plant_name">Plant Name:</string>
	<string name="date_purchased">Date Purchased:</string>
	
	<string name="get_started">To get started, log in using Facebook</string>
	<string name="settings">Settings</string>
	<string name="share_to_fb">Share to Facebook</string>
    <string name="app_id">137139729820604</string>
    <string name="error_dialog_title">Something Went Wrong</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="exception">Exception: %1$s</string>
    <string name="action_growing_default">Select a plant</string>
    <string name="action_growing">What are you growing?</string>
    
    <string-array name="plant_types">
        <item>Orchid</item>
    </string-array>

    <string-array name="plant_og_urls">
        <item>http://redshift6apps.com/sample-plantbuddy-facebook-page.html</item>
    </string-array>
    
    <string name="result_dialog_title">Success!</string>
	<string name="result_dialog_button_text">Thanks!</string>
	<string name="result_dialog_text">This image has been posted to Facebook.</string>
	<string name="progress_dialog_text">Announcing, please wait...</string>
	<string name="add_a_comment">Add a comment...</string>
	
</resources>
