<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reverse_gradients"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/view_plant_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
		android:background="@drawable/gradients"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/gradients"
            android:contentDescription="Plant Buddy"
            android:src="@drawable/plantbuddy" />

        <TextView
            android:id="@+id/edit_plant_name"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:background="@drawable/gradients"
            android:gravity="center"
            android:text="@string/new_plant"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/view_edit_plant_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.07"
            android:contentDescription=" "
            android:background="@drawable/gradients" />

    </LinearLayout>
    
	<ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
   
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
    	<TextView
	        android:id="@+id/edit_plant_plant_name_label"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/plant_name"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
        	android:id="@+id/edit_plant_plant_name"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/rounded_all_corners"
        	android:paddingTop="4dp"
        	android:paddingBottom="4dp"
	        android:paddingLeft="4dp"
        	android:paddingRight="4dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:layout_marginBottom="10dp"
        	android:textColor="@color/light_grey"
        	android:shadowColor="@color/light_grey" >

        	<requestFocus />
    	</EditText>

    	<TextView
	        android:id="@+id/edit_plant_date_purchased_label"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/date_purchased"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

    	<DatePicker
	        android:id="@+id/edit_plant_date_purchased"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
	
    	<TextView
	        android:id="@+id/edit_plant_source_label"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/source_colon"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    	<EditText
	        android:id="@+id/edit_plant_source"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/rounded_all_corners"
    		android:paddingTop="4dp"
    		android:paddingBottom="4dp"
    		android:paddingLeft="4dp"
    		android:paddingRight="4dp"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
    		android:layout_marginBottom="10dp"
    		android:textColor="@color/light_grey"
    		android:shadowColor="@color/light_grey" >
        	</EditText>

    	<TextView
	        android:id="@+id/edit_plant_description_label"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/desctiption"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

    	<EditText
	        android:id="@+id/edit_plant_description"
        	android:layout_width="match_parent"
        	android:layout_height="91dp"
        	android:inputType="textMultiLine"
        	android:background="@drawable/rounded_all_corners"
    		android:paddingTop="4dp"
    		android:paddingBottom="4dp"
    		android:paddingLeft="4dp"
    		android:paddingRight="4dp"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
    		android:layout_marginBottom="10dp"
    		android:textColor="@color/light_grey"
    		android:shadowColor="@color/light_grey" />

    	<Button
    	    android:id="@+id/edit_plant_add_plant_button"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/add_plant" />

    </LinearLayout>
	</ScrollView>
</LinearLayout>