<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reverse_gradients"
    android:gravity="fill_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/view_plant_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
		android:background="@drawable/gradients"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/gradients"
            android:contentDescription="Plant Buddy"
            android:src="@drawable/plantbuddy" />

        <TextView
            android:id="@+id/view_edit_plant_name"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            android:background="@drawable/gradients"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/view_edit_plant_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.07"
            android:contentDescription=" "
            android:background="@drawable/gradients" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_plant_header"
        android:layout_marginTop="14dp" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			
			<LinearLayout
        		android:id="@+id/view_plant_about_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            	
	           	<TextView
                android:id="@+id/view_edit_plant_about_label"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_about_icon"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:contentDescription=" "
            		android:src="@drawable/plant" />
        	</LinearLayout>
            
            
            <TextView
        		android:id="@+id/view_edit_plant_description"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text=""
        		android:background="@drawable/rounded_all_corners"
        		android:paddingTop="4dp"
        		android:paddingBottom="4dp"
        		android:paddingLeft="4dp"
        		android:paddingRight="4dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
        		android:layout_marginBottom="10dp"
        		android:textColor="@color/light_grey"
        		android:shadowColor="@color/light_grey" />
            
            
            <LinearLayout
        		android:id="@+id/view_plant_age_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            	
	           	<TextView
	                android:id="@+id/view_edit_plant_age_label"
	                android:paddingLeft="10dp"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/aquired_on"
                	android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_age_icon"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:contentDescription=" "
            		android:src="@drawable/calendar" />
        	</LinearLayout>
            
            
            <TextView
        		android:id="@+id/view_edit_plant_age"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text=""
        		android:background="@drawable/rounded_all_corners"
        		android:paddingTop="4dp"
        		android:paddingBottom="4dp"
        		android:paddingLeft="4dp"
        		android:paddingRight="4dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
        		android:layout_marginBottom="10dp"
        		android:textColor="@color/light_grey"
        		android:shadowColor="@color/light_grey" />
            
            <LinearLayout
        		android:id="@+id/view_plant_source_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            	
	           	<TextView
                android:id="@+id/view_edit_plant_source_label"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_source_icon"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:contentDescription=" "
            		android:src="@drawable/source" />
        	</LinearLayout>
        	
            
            
            <TextView
        		android:id="@+id/view_edit_plant_source"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text=""
        		android:background="@drawable/rounded_all_corners"
        		android:paddingTop="4dp"
        		android:paddingBottom="4dp"
        		android:paddingLeft="4dp"
        		android:paddingRight="4dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
        		android:textColor="@color/light_grey"
        		android:shadowColor="@color/light_grey" />
            
            <!-- Image Grid goes here -->
            
            <LinearLayout
        		android:id="@+id/view_plant_images_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            	
            	<TextView
	                android:id="@+id/view_edit_plant_images_label"
	                android:paddingLeft="10dp"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/images"
                	android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_take_picture"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:contentDescription=" "
            		android:src="@drawable/camera" />
        	</LinearLayout>
            
            <com.aftgg.plantbuddy.core.ExpandableHeightGridView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/view_plant_images_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_all_corners"
                android:columnWidth="80dp"
                android:gravity="center"
                android:horizontalSpacing="0dp"
                android:verticalSpacing="0dp"
                android:isScrollContainer="false"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:textColor="@color/light_grey" />
                    
            <LinearLayout
        		android:id="@+id/view_plant_caretips_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            
            	<TextView
	                android:id="@+id/view_edit_plant_caretips_label"
	                android:paddingLeft="10dp"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/care_tip"
                	android:textAppearance="?android:attr/textAppearanceLarge" />	
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer_caretips"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_sun"
            		android:contentDescription=" "
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:src="@drawable/sun" />
        	</LinearLayout>
        	
        	<com.aftgg.plantbuddy.core.ExpandableHeightGridView
        		xmlns:android="http://schemas.android.com/apk/res/android"
        		android:id="@+id/view_plant_care_tips_grid"
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:layout_marginBottom="10dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
    			android:isScrollContainer="false"
        		android:background="@drawable/rounded_all_corners"
        		android:columnWidth="90dp"
        		android:gravity="center"
        		android:horizontalSpacing="10dp"
        		android:numColumns="1"
        		android:stretchMode="columnWidth"
		        android:verticalSpacing="10dp" 
        		android:textColor="@color/light_grey" />
            
            <LinearLayout
        		android:id="@+id/view_plant_notes_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
        		
            	<TextView
	                android:id="@+id/view_edit_plant_notes_label"
	                android:paddingLeft="10dp"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/notes"
                	android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_notes_spacer"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_add_note"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:src="@drawable/stickynote" />
        	</LinearLayout>
            
            <com.aftgg.plantbuddy.core.ExpandableHeightGridView
        		xmlns:android="http://schemas.android.com/apk/res/android"
        		android:id="@+id/view_plant_notes_grid"
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:layout_marginBottom="10dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
    			android:isScrollContainer="false"
        		android:background="@drawable/rounded_all_corners"
        		android:columnWidth="90dp"
        		android:gravity="center"
        		android:horizontalSpacing="10dp"
        		android:numColumns="1"
        		android:stretchMode="columnWidth"
		        android:verticalSpacing="10dp" 
        		android:textColor="@color/light_grey"
				/>
            
            <LinearLayout
        		android:id="@+id/view_plant_alarms_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            
            	<TextView
                	android:id="@+id/view_edit_plant_alarms_label"
                	android:paddingLeft="10dp"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/alarms"
                	android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer_alarms"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_stopwatch"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:src="@drawable/stopwatch" />
        	</LinearLayout>
            
	        <!-- alarms go here -->
	        <com.aftgg.plantbuddy.core.ExpandableHeightGridView
        		xmlns:android="http://schemas.android.com/apk/res/android"
        		android:id="@+id/view_plant_alarms_grid"
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:layout_marginBottom="10dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
    			android:isScrollContainer="false"
        		android:background="@drawable/rounded_all_corners"
        		android:columnWidth="90dp"
        		android:gravity="center"
        		android:horizontalSpacing="10dp"
        		android:numColumns="1"
        		android:stretchMode="columnWidth"
		        android:verticalSpacing="10dp"
        		android:textColor="@color/light_grey"/>
            
            <LinearLayout
        		android:id="@+id/view_plant_links_layout"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="5dp"
        		android:orientation="horizontal" >
            
            	 <TextView
                	android:id="@+id/view_plant_links_label"
                	android:paddingLeft="10dp"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/links"
                	android:textAppearance="?android:attr/textAppearanceLarge" />
            	
            	<TextView
            		android:id="@+id/view_edit_plant_spacer_links"
            		android:layout_width="202dp"
           		 	android:layout_height="match_parent"
            		android:layout_weight="0.90"
            		android:gravity="center"
            		android:text=""
            		android:textAppearance="?android:attr/textAppearanceLarge" />

        		<ImageView
            		android:id="@+id/view_edit_plant_links"
            		android:layout_width="wrap_content"
            		android:layout_height="match_parent"
            		android:layout_weight="0.07"
            		android:layout_marginRight="10dp"
            		android:src="@drawable/links" />
        	</LinearLayout>
           
        	<com.aftgg.plantbuddy.core.ExpandableHeightGridView
        		xmlns:android="http://schemas.android.com/apk/res/android"
        		android:id="@+id/view_plant_links_grid"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="10dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
    			android:isScrollContainer="false"
        		android:background="@drawable/rounded_all_corners"
        		android:columnWidth="90dp"
        		android:gravity="center"
        		android:horizontalSpacing="10dp"
        		android:numColumns="1"
        		android:stretchMode="columnWidth"
        		android:textColor="@color/light_grey" />
            
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
